--- a/src/global.css
+++ b/src/global.css
@@ -12,6 +12,75 @@ code {
     monospace;
 }
 
-ul, li {
+ul,
+li {
+  padding: 0;
   list-style: none;
+}
+
+.body {
+  background-color: #D9AFD9;
+  background-image: linear-gradient(0deg, #D9AFD9 0%, #97D9E1 100%);
+
+}
+
+.steel {
+  background-color: #cad4df;
+}
+
+.fire {
+  background-color: #fcded5;
+}
+
+.grass {
+  background-color: #DEFDE0;
+}
+
+.electric {
+  background-color: #FCF7DE;
+}
+
+.water,
+.ice {
+  background-color: #DEF3FD;
+}
+
+.ground {
+  background-color: #ffe6cd;
+}
+
+.rock {
+  background-color: #d5d5d4;
+}
+
+.fairy {
+  background-color: #fceaff;
+}
+
+.poison {
+  background-color: #ddc8ff;
+}
+
+.bug {
+  background-color: #c5ddb5;
+}
+
+.dragon {
+  background-color: #97b3e6;
+}
+
+.psychic {
+  background-color: #eda1da;
+}
+
+.flying {
+  background-color: #F5F5F5;
+}
+
+.fighting {
+  background-color: #E6E0D4;
+}
+
+.normal {
+  background-color: #F5F5F5;
 }
